--- a/node/graphql.html
+++ b/node/graphql.html
@@ -165,12 +165,14 @@
 <p>If your GraphQL operation was correctly structured then the node will output data in Veritone’s GraphQL JSON format. Incorrect formatting or other errors will result in the node reporting a 400 Error.</p>
 
 <h3>References</h3>
-<p>You can also explore Veritone’s GraphQL API with the Veritone GraphiQL editor interface right in your browser with this <a href="https://api.veritone.com/v3/graphiql">link</a></p>
+<ul>
+    <li><a href="https://api.veritone.com/v3/graphiql">GraphiQL</a> interface for trying Veritone GraphQL APIs yourself </li>
+    <li><a href="https://docs.veritone.com/#/apis/"> Link to API Docs</a> - Documentation on using Veritone's API and understanding the Data Model, </li>
+</ul>
 
-<p>Start typing out the query and the GraphiQL interface will autotype the properties available for the chosen query.</p>
 
 <h4>GraphQL Sample</h4>
-<p>Here is a sample GraphQL query returning a list of your logged in Organization’s users:</p>
+<p>Here is a sample GraphQL query returning a list of the active users in your Veritone Organization:</p>
 <code>
 query{
 	users{
@@ -183,6 +185,4 @@ query{
 }
 }
 </code>
-
-<p>This sample query will return the list of users in the Organization with the id, name, firstName, and lastName properties included for each user record. You can of course modify this query to remove any of these properties or add additional ones!</p>
 </script>
