VTN-19941 - Update api aiWARE node documentation
Update the api aiWARE node Inputs section with msg.orgToken and msg.url variable sub sections and explanations (also cleaned up the References and Details sections as well!)

--- a/node/graphql.html
+++ b/node/graphql.html
@@ -139,10 +139,20 @@
     <p>Executes freeform graphql query and mutation statements with authentication already handled.</p>
 
 <h3>Inputs</h3>
-<p>Each api node has a createJob graphQL statement that is used for starting an Engine process using Veritone’s GraphQL API populated by default, but can be deleted and replaced with the GraphQL statement intended for execution in that node.</p>
-
-<p>Here is an example of mustache syntax in the api node:
-<code>{{payload.myVariable}}</code></p>
+<dl class="message-properties">
+    <dt>
+        url <span class="property-type">string</span>
+    </dt>
+    <dd>
+        the intended aiWARE endpoint (optional)
+    </dd>
+     <dt>
+        orgToken <span class="property-type">string</span>
+    </dt>
+    <dd>
+        assign this variable to the organization API token performing an authorized API request on that organization (optional)
+    </dd>
+</dl>
 
 <h3>Outputs</h3>
      <ol class="node-ports">
@@ -164,10 +174,16 @@
 <h3>Details</h3>
 <p>If your GraphQL operation was correctly structured then the node will output data in Veritone’s GraphQL JSON format. Incorrect formatting or other errors will result in the node reporting a 400 Error.</p>
 
-<h3>References</h3>
-<p>You can also explore Veritone’s GraphQL API with the Veritone GraphiQL editor interface right in your browser with this <a href="https://api.veritone.com/v3/graphiql">link</a></p>
+<p>Each api node has a createJob graphQL statement that is used for starting an Engine process using Veritone’s GraphQL API populated by default, but can be deleted and replaced with the GraphQL statement intended for execution in that node.</p>
 
-<p>Start typing out the query and the GraphiQL interface will autotype the properties available for the chosen query.</p>
+<p>Here is an example of correct mustache syntax in the api node:
+<code>{{payload.myVariable}}</code></p>
+
+<h3>References</h3>
+<ul>
+    <li><a href="https://api.veritone.com/v3/graphiql">GraphiQL</a> interface for trying Veritone GraphQL APIs yourself </li>
+    <li><a href="https://docs.veritone.com/#/apis/"> Link to API Docs</a> - Documentation on using Veritone's API and understanding the Data Model, </li>
+</ul>
 
 <h4>GraphQL Sample</h4>
 <p>Here is a sample GraphQL query returning a list of your logged in Organization’s users:</p>
