--- a/node/jobs.html
+++ b/node/jobs.html
@@ -17,8 +17,9 @@
         color: '#b3e5fc',
         defaults: {
             name: { value: "" },
-            limit: { value: 20 },
-            fields: { value: ["id", "name", "status", "createdDateTime"] }
+            limit: { value: 10 },
+            fields: { value: ["id", "name", "status", "createdDateTime"] },
+            taskFields: { value: [] }
         },
         inputs: 1,
         outputs: 2,
@@ -38,28 +39,52 @@
                 'targetId', 'jobConfig',
                 'description', 'modifiedDateTime'
             ];
-            this.selectedFields = {};
-            var selectedFields = this.selectedFields;
-            this.fields.forEach(function (field) {
-                selectedFields[field] = true;
+            var availableTaskFields = [
+                'id', 'status', 'payload', 'output',
+                'queuedDateTime', 'startedDateTime', 'completedDateTime',
+                'order', 'engineId', 'buildId', 'sourceAssetId'
+            ];
+            var mapFields = {};
+            var mapTaskFields = {};
+            (this.fields || []).forEach(function (field) {
+                mapFields[field] = true;
             });
+            (this.taskFields || []).forEach(function (field) {
+                mapTaskFields[field] = true;
+            })
+            this.mapFields = mapFields;
+            this.mapTaskFields = mapTaskFields;
             $("#node-input-job-selected-fields").append(
-                "<h5> Select Fields </h5>",
+                "<h5> Select Jobs Fields </h5>",
                 availableFields.map(function (field) {
                     var fieldNode = $(`<span> ${field}</span>`);
                     var checkbox = $(`<input type="checkbox" style="vertical-align: baseline; width: 30px">`);
-                    checkbox.prop("checked", selectedFields[field]);
+                    checkbox.prop("checked", mapFields[field]);
                     checkbox.on("change", function () {
-                        selectedFields[field] = checkbox.prop("checked");
+                        mapFields[field] = checkbox.prop("checked");
                     });
                     return $("<div></div>").append(checkbox, fieldNode);
-                })
+                }),
+                "<h5> Select Tasks Fields </h5>",
+                availableTaskFields.map(function (field) {
+                    var fieldNode = $(`<span> ${field}</span>`);
+                    var checkbox = $(`<input type="checkbox" style="vertical-align: baseline; width: 30px">`);
+                    checkbox.prop("checked", mapTaskFields[field]);
+                    checkbox.on("change", function () {
+                        mapTaskFields[field] = checkbox.prop("checked");
+                    });
+                    return $("<div></div>").append(checkbox, fieldNode);
+                }),
             );
         },
         oneditsave: function () {
-            var selectedFields = this.selectedFields;
-            this.fields = Object.keys(selectedFields).filter(function (k) {
-                return selectedFields[k];
+            var fields = this.mapFields;
+            this.fields = Object.keys(fields).filter(function (k) {
+                return fields[k];
+            });
+            var mapTaskFields = this.mapTaskFields;
+            this.taskFields = Object.keys(mapTaskFields).filter(function (k) {
+                return mapTaskFields[k];
             });
         }
     });
