--- a/node/me.html
+++ b/node/me.html
@@ -1,11 +1,13 @@
 <script type="text/javascript">
-    RED.nodes.registerType('me', {
-        category: 'aiWARE',
+	RED.nodes.registerType('me', {
+		category: 'aiWARE',
         color: '#b3e5fc',
-        defaults: {
-            name: { value: "" }
-        },
-        inputs: 1,
+		defaults: {
+			name: { value: "" },
+			userName: { value: "" },
+			password: { value: "" }
+		},
+		inputs: 1,
         outputs: 2,
         outputLabels: ["result", "error"],
         icon: "veritone-logo-transparent.png",
@@ -14,14 +16,22 @@
         label: function () {
             return this.name || "me";
         }
-    });
+	});
 </script>
 
 <script type="text/x-red" data-template-name="me">
     <div class="form-row">
         <label for="node-input-name"><i class="icon-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
-    </div>
+	</div>
+	<div class="form-row">
+        <label for="node-input-userName"><i class="icon-user"></i> Username</label>
+        <input type="text" id="node-input-userName" placeholder="Username">
+	</div>
+	<div class="form-row">
+        <label for="node-input-password"><i class="icon-lock"></i> Password</label>
+        <input type="password" id="node-input-password">
+	</div>
 </script>
 
 <script type="text/x-red" data-help-name="me">
